--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,21 +13,16 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
-    dplyr,
-    readr,
-    purrr,
     knitr,
-    curl,
-    lubridate,
-    ggplot2,
-    cowplot,
     patchwork,
     fs,
     hoaddata,
-    forcats,
     countrycode,
     bigrquery,
-    hoaddata
+    hoaddata,
+    rmarkdown,
+    tidyverse,
+    here
 Remotes: 
     subugoe/hoaddata@3b9eeaf37383c2999f122dd28c460799c2ba2a15
 
