Journal investigated: hybrid journals with at least one oa article between 2018 - 2022 (check 0001-4338)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,8 @@ Imports:
     hoaddata,
     rmarkdown,
     tidyverse,
-    here
+    here,
+    kableExtra
 Remotes: 
     subugoe/hoaddata@3b9eeaf37383c2999f122dd28c460799c2ba2a15
 
