--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,8 @@ Imports:
     rmarkdown,
     tidyverse,
     here,
-    kableExtra
+    kableExtra,
+    janitor
 Remotes: 
     subugoe/hoaddata@3b9eeaf37383c2999f122dd28c460799c2ba2a15
 
